@@ -1,18 +1,20 @@
 package carpet.settings;
 
-import carpet.utils.Translations;
 import carpet.utils.Messenger;
+import carpet.utils.Translations;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.network.chat.BaseComponent;
+import org.apache.commons.lang3.ClassUtils;
+
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
-import net.minecraft.commands.CommandSourceStack;
-import org.apache.commons.lang3.ClassUtils;
-
-import static carpet.utils.Translations.tr;
 
 /**
  * A parsed Carpet rule, with its field, name, value, and other useful stuff.
@@ -25,8 +27,10 @@ import static carpet.utils.Translations.tr;
 public final class ParsedRule<T> implements Comparable<ParsedRule> {
     public final Field field;
     public final String name;
+    @Deprecated
     public final String description;
     public final String scarpetApp;
+    @Deprecated
     public final List<String> extraInfo;
     public final List<String> categories;
     public final List<String> options;
@@ -38,6 +42,7 @@ public final class ParsedRule<T> implements Comparable<ParsedRule> {
     public final String defaultAsString;
     public final SettingsManager settingsManager;
 
+    @SuppressWarnings("deprecation")
     ParsedRule(Field field, Rule rule, SettingsManager settingsManager)
     {
         this.field = field;
@@ -102,6 +107,7 @@ public final class ParsedRule<T> implements Comparable<ParsedRule> {
                 this.validators.add(callConstructor(Validator._STRICT.class));
             }
         }
+        this.registerDefaultTranslations();
     }
 
     private <T> T callConstructor(Class<T> cls)
@@ -162,8 +168,9 @@ public final class ParsedRule<T> implements Comparable<ParsedRule> {
                     if (source != null)
                     {
                         validator.notifyFailure(source, this, stringValue);
-                        if (validator.description() != null)
-                            Messenger.m(source, "r " + validator.description());
+                        BaseComponent description = validator.descriptionText();
+                        if (description != null)
+                            Messenger.m(source, "r", description);
                     }
                     return null;
                 }
@@ -264,44 +271,63 @@ public final class ParsedRule<T> implements Comparable<ParsedRule> {
         return this.name + ": " + getAsString();
     }
 
-    private String translationKey()
+    private BaseComponent getNameText(Function<BaseComponent, BaseComponent> translator)
     {
-        return String.format("rule.%s.name", name);
-    }
-
-    /**
-     * @return A {@link String} being the translated {@link ParsedRule#name} of this rule,
-     *                          in Carpet's configured language.
-     */
-    public String translatedName(){
-        String key = translationKey();
-        return Translations.hasTranslation(key) ? tr(key) + String.format(" (%s)", name): name;
-    }
-
-    /**
-     * @return A {@link String} being the translated {@link ParsedRule#description} of this rule,
-     *                          in Carpet's configured language.
-     */
-    public String translatedDescription()
-    {
-        return tr(String.format("rule.%s.desc", (name)), description);
-    }
-
-    /**
-     * @return A {@link String} being the translated {@link ParsedRule#extraInfo} of this 
-     * 	                        {@link ParsedRule}, in Carpet's configured language.
-     */
-    public List<String> translatedExtras()
-    {
-        if (!Translations.hasTranslations()) return extraInfo;
-        String keyBase = String.format("rule.%s.extra.", name);
-        List<String> extras = new ArrayList<>();
-        int i = 0;
-        while (Translations.hasTranslation(keyBase+i))
+        BaseComponent nameText = Messenger.tr("%s.rule.%s.name".formatted(settingsManager.getIdentifier(), name));
+        if (!translator.apply(nameText).getString().equals(name))
         {
-            extras.add(Translations.tr(keyBase+i));
+            nameText.append(Messenger.s(" (%s)".formatted(name)));
+        }
+        return nameText;
+    }
+
+    // source is required here since we want to dynamically adding a " (name)" prefix if there's translation
+    public BaseComponent getNameText(CommandSourceStack source)
+    {
+        return getNameText(nameText -> Translations.translate(nameText, source));
+    }
+
+    public BaseComponent getNameText()
+    {
+        return getNameText(Translations::translate);
+    }
+
+    public BaseComponent getDescriptionText()
+    {
+        return Messenger.tr("%s.rule.%s.desc".formatted(settingsManager.getIdentifier(), name));
+    }
+
+    private List<BaseComponent> getExtrasText(Predicate<String> indexValidator)
+    {
+        String keyBase = "%s.rule.%s.extra.".formatted(settingsManager.getIdentifier(), name);
+        List<BaseComponent> extras = new ArrayList<>();
+        int i = 0;
+        while (indexValidator.test(keyBase + i))
+        {
+            extras.add(Messenger.tr(keyBase+i));
             i++;
         }
-        return (extras.isEmpty()) ? extraInfo : extras;
+        return extras;
+    }
+
+    public List<BaseComponent> getExtrasText(CommandSourceStack source)
+    {
+        return getExtrasText(key -> Translations.hasTranslation(key, source));
+    }
+
+    public List<BaseComponent> getExtrasText()
+    {
+        return getExtrasText(Translations::hasTranslation);
+    }
+
+    private void registerDefaultTranslations()
+    {
+        String sid = settingsManager.getIdentifier();
+        Translations.addEntry(Translations.DEFAULT_LANGUAGE, "%s.rule.%s.name".formatted(sid, name), name, false);
+        Translations.addEntry(Translations.DEFAULT_LANGUAGE, "%s.rule.%s.desc".formatted(sid, name), description, false);
+        for (int i = 0; i < extraInfo.size(); i++)
+        {
+            Translations.addEntry(Translations.DEFAULT_LANGUAGE, "%s.rule.%s.extra.%s".formatted(sid, name, i), extraInfo.get(i), false);
+        }
     }
 }
